--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .env.production
 .phpactor.json
 .phpunit.result.cache
+docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 auth.json
@@ -21,3 +22,5 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+vendor
+composer.lock
